Fixed mobile version horizontal scroll with percentages

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+	width: 100%;
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	display: flex;
 	justify-content: center;
@@ -13,6 +14,7 @@ body {
 
 .container{
 	max-width: 1200px;
+	width: 90%;
 	margin: 0 auto;
 	display: flex;
 	justify-content: center;
@@ -40,8 +42,9 @@ h3 {
 p {
 	font-size: 0.875em;
 	line-height: 1.3125em;
-    padding: 0 1.875em;
 }
+
+
 
 /*The widths are in a percentage!*/
 header {
@@ -68,7 +71,7 @@ header h1 span {
 }
 
 header nav {
-	width: 50%;
+	width: 100%;
 	margin: 0 1em;
 	padding: 1em 0 1em;
 }
@@ -104,13 +107,12 @@ header nav ul li a{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 0 1em;
 }
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 	border-top: 3px solid #77a466;
-	margin: auto 1em;
+	margin: auto;
 }
 
 .main-title {
@@ -118,8 +120,8 @@ header nav ul li a{
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
-	margin: auto 1em;
-	padding: 0 1em;
+	margin: auto;
+	padding: 0;
 }
 
 .main-title h2 {
@@ -138,28 +140,26 @@ header nav ul li a{
 .section-two,
 .section-three {
 	display: flex;
-	justify-content: safe left;
+	justify-content: flex-start;
 	align-items: center;
 	flex-flow: row wrap;
 	width: 100%;
 	border-top: 1px solid #eee;
-	margin: auto 1em;
-	padding-left: 1em;
+	margin: auto;
 }
 
 .section-three {
 	border-bottom: 1px solid #eee;
 }
 
+.section-one h3, .section-two h3, .section-three h3 {
+	width: 100%;
+}
 
 .section-one p,
 .section-two p,
 .section-three p {
 	padding: 0;
-}
-
-.section-three h3 {
-	width: 51%;
 }
 
 .menu {
@@ -206,18 +206,17 @@ footer span {
 @media all and (min-width:768px) {
 	
 	.bottom-section {
-		width: 100%;
-		margin: 1em;
+		justify-content: space-between;
 		align-items: flex-start;
 		border-top: 3px solid #eee;
 		border-bottom: 3px solid #eee;
 	}
 
 	.section-one, .section-two, .section-three {
-		width: 30%;
+		flex-basis: 30%;
 		margin: 0;
 		border: none;
-		padding: 0.5em;
+
 	}
 
 	.section-two {
